--- a/app/src/styles/App.css
+++ b/app/src/styles/App.css
@@ -52,10 +52,14 @@
   /* justify-content: center; */
   align-items: center;
   z-index: 3;
+  z-index: 1002;
   direction: rtl;
 }
+.header .mobile-design {
+  display: none;
+}
 
-#logo-and-ul-nav {
+.ogo-and-ul-nav {
   display: flex;
   direction: rtl;
   width: 60%;
