--- a/app/src/styles/user.css
+++ b/app/src/styles/user.css
@@ -79,13 +79,15 @@
 }
 
 .container-of-market-show-div {
-    width: 90%;
-
+    width: 65%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
 }
 
 .markets-div {
     width: 100%;
-    height: 150px;
+    height: 175px;
     background-color: #000f51;
     border-radius: 10px;
     gap: 10px;
@@ -107,10 +109,20 @@
     align-items: center;
 }
 
+.container-of-market-show {
+    margin-top: 20px;
+}
+
 @media (max-width: 768px) {
+    .container-of-market-show {
+        margin-top: 0;
+    }
+
     .container-of-market-show-div {
         display: grid;
         gap: 5px;
+        width: 90%;
+        margin-top: 30px;
         grid-template-columns: 1fr 1fr;
     }
 
@@ -136,7 +148,14 @@
     #header-of-text-area {
         margin: 10px 0;
     }
-    #textarea-container textarea{
+
+    #textarea-container textarea {
         height: 110px;
     }
+
+    .markets-div {
+
+        height: 150px;
+    }
+
 }
