--- a/app/src/styles/gold.css
+++ b/app/src/styles/gold.css
@@ -255,5 +255,9 @@ table {
     .gold-container-div {
         width: 90%;
     }
+    .change_percent {
+        direction: ltr;
+        font-size: 12px;
+    }
 
 }
