--- a/app/src/styles/user.css
+++ b/app/src/styles/user.css
@@ -113,7 +113,112 @@
     margin-top: 20px;
 }
 
-@media (max-width: 768px) {
+.searching-modal {
+    top: 50%;
+    left: 50%;
+    right: auto;
+    position: absolute;
+    bottom: auto;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    height: 60%;
+    gap: 10px;
+    box-shadow: 0 0 10px;
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
+}
+
+.input-search-box {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    background-color: #fff;
+    gap: 10px;
+    padding: 10px 0;
+    border: 0.5px solid gray;
+    border-radius: 5px;
+}
+
+.input-search-box input {
+    border: none;
+    outline: none;
+}
+
+.input-search-box i {
+    margin: 0 15px;
+}
+
+.tab-for-search {
+    width: 90%;
+    display: flex;
+    direction: rtl;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.tab-for-search button {
+    /* background-color: #fff; */
+    border: none;
+    outline: none;
+    padding: 10px 15px;
+    font-size: 14px;
+    transition: background-color 0.3s ease-in;
+    border-radius: 5px;
+}
+
+.tab-for-search button.active-tab {
+    background-color: #000f51;
+    color: white;
+}
+
+.show-filtered-search-item {
+    width: 90%;
+    height: 70%;
+    overflow-y: auto;
+
+
+}
+
+.bourse-search-div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px 0;
+    padding-bottom: 5px;
+    border-bottom: 0.5px solid rgba(128, 128, 128, 0.412);
+}
+
+.bourse-search-div span {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    justify-content: start;
+}
+
+.bourse-search-div #name-of-company {
+    display: flex;
+    flex-direction: column;
+    padding: 0 5px;
+}
+
+#company-name {
+    color: gray;
+    font-size: 14px;
+
+}
+
+@media (max-width: 599px) {
+    .searching-modal {
+        width: 100%;
+        height: 100%;
+        padding-top: 200px;
+        direction: rtl;
+    }
+
     .container-of-market-show {
         margin-top: 0;
     }
